--- a/NiceWeather/Info.plist
+++ b/NiceWeather/Info.plist
@@ -10,6 +10,23 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>zh</string>
+		<string>en</string>
+		<string>zh_CN</string>
+		<string>zh_TW</string>
+		<string>fr</string>
+		<string>it</string>
+		<string>Indonesian</string>
+		<string>de</string>
+		<string>ja</string>
+		<string>ko</string>
+		<string>Polish</string>
+		<string>Hindi</string>
+		<string>Hebrew</string>
+		<string>Arabic</string>
+	</array>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
@@ -18,6 +35,8 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
